# UsTxGNN

./: README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check-new-evidence.yml  indexnow.yml  interaction-update-check.yml  link-check.yml  news-monitor.yml  pages.yml
config/: fields.yaml
data/news/: keywords.json  synonyms.json  us_news.json
docs/: CNAME  Gemfile  _config.yml  index.md  robots.txt
docs/_drugs/: 1_2-distearoyl-sn-glycero-3-phosphocholine_activat.md  1_2-distearoyl-sn-glycero-3-phosphocholine_berberi.md  1_2-docosahexanoyl-sn-glycero-3-phosphoserine_calc.md  1_2-naphthoquinone_aconitic_acid_arsenic_citric_ac.md  1_3-bisurea_colchicum_autumnale_bulb_ferrosoferric.md  1_3-bisurea_daphne_mezereum_bark_goldenseal_nitric.md  1_4-naphthoquinone_aconitic_acid_-_anhydrous_citri.md  2-butoxyethyl_laurate_chelidonium_majus_whole_gels.md  2-mercaptoethanol_borosilicate_glass_carbon_monoxi.md  2_3_7_8-tetrachlorodibenzo-p-dioxin_aconitum_napel.md  2_3_7_8-tetrachlorodibenzo-p-dioxin_aluminum_arcti.md  abacavir.md  abacavir_sulfate_lamivudine.md  (+1554 more)
prompts/: pharmacist_v5_storytelling.md
scripts/: batch_collect_bundles.py  batch_generate_reports.py  check_clinicaltrials.py  check_pubmed.py  drug_list.json  generate_drug_pages.py  generate_fhir_resources.py  generate_news_keywords.py  generate_search_index.py  github_utils.py  integrate_predictions.py  process_fda_data.py  process_news.py  run_dl_prediction.py  run_kg_prediction.py
tests/: __init__.py  conftest.py  test_disease_mapper.py  test_loader.py  test_openfda.py
(+6677 files in other folders)
